samples/_failures_safe/1761244118_b80c46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b7a5c1c.c:161: error: expected ‘;’, ‘,’ or ‘)’ at end of input
